--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Experimental media indexer, browser and search engine",
   "main": "index.js",
   "scripts": {
-    "test": "grunt"
+    "test": "grunt spec"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,12 @@
     "lodash": "^2.4.1",
     "mongoose": "^3.8.19",
     "musicmetadata": "^0.6.0"
+  },
+  "devDependencies": {
+    "chai": "^1.10.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-mocha-test": "^0.12.3",
+    "mocha": "^2.0.1"
   }
 }
