--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/joerx/mediakit",
   "dependencies": {
     "lodash": "^2.4.1",
+    "mongodb": "^1.4.22",
     "mongoose": "^3.8.19",
     "musicmetadata": "^0.6.0"
   },
